[gd_scene load_steps=16 format=3 uid="uid://duxyfg6i08iui"]

[ext_resource type="Script" uid="uid://bpxruysqcwpf6" path="res://src/class/enemy_melee.gd" id="1_f2mgi"]
[ext_resource type="Script" uid="uid://baw7jrp64qlgb" path="res://src/component/knockback_component.gd" id="2_ei8lu"]
[ext_resource type="Script" uid="uid://c2dfui3oddg1r" path="res://src/component/npc/chase_component.gd" id="3_olih5"]
[ext_resource type="Script" uid="uid://b3htw0ehvw1xh" path="res://src/component/movement_component.gd" id="4_5hjl1"]
[ext_resource type="Script" uid="uid://dvrmix7xqorev" path="res://src/component/essence_component.gd" id="5_57pmb"]
[ext_resource type="Script" uid="uid://c3klywbeud1cv" path="res://src/component/dash_component.gd" id="6_ei8lu"]
[ext_resource type="Script" uid="uid://tlvl68soe85" path="res://src/component/enemy_component.gd" id="7_awu5q"]
[ext_resource type="Script" uid="uid://dqg5sl3316gba" path="res://src/class/hazard.gd" id="7_ei8lu"]
[ext_resource type="Texture2D" uid="uid://c6dbbnkdnhup6" path="res://images/entity/buffed.png" id="8_ei8lu"]
[ext_resource type="AudioStream" uid="uid://bgcbf6ucfr20n" path="res://sfx/shoot.wav" id="10_guxfu"]
[ext_resource type="AudioStream" uid="uid://bos0tcb8d0swg" path="res://sfx/hit.wav" id="11_15kmb"]
[ext_resource type="PackedScene" uid="uid://cbeov66ersklw" path="res://prefab/entity/3d_bar.tscn" id="11_a7atj"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_c3pg5"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ei8lu"]
radius = 0.736626
height = 1.84593

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_od4yj"]
radius = 0.66

[node name="EnemyMelee" type="CharacterBody3D"]
collision_layer = 4
collision_mask = 4
slide_on_ceiling = false
script = ExtResource("1_f2mgi")

[node name="OmniLight3D" type="OmniLight3D" parent="."]
light_color = Color(1, 0, 0, 1)
light_energy = 1.5
light_volumetric_fog_energy = 0.0
light_specular = 0.0
omni_range = 10.0

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
simplify_path = true
simplify_epsilon = 0.5
debug_use_custom = true
debug_path_custom_point_size = 1.0

[node name="Hitbox" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_c3pg5")

[node name="KnockbackComponent" type="Node" parent="." node_paths=PackedStringArray("movement_component")]
script = ExtResource("2_ei8lu")
movement_component = NodePath("../MovementComponent")

[node name="ChaseComponent" type="Node" parent="."]
script = ExtResource("3_olih5")
agro_distance = 30.0
min_distance = 0.0

[node name="MovementComponent" type="Node" parent="."]
script = ExtResource("4_5hjl1")
max_speed = 26.5
default_speed = 20.0
floor_friction = 0.08

[node name="EssenceComponent" type="Node" parent="."]
script = ExtResource("5_57pmb")

[node name="DashComponent" type="Node" parent="."]
script = ExtResource("6_ei8lu")
dash_speed = 128.0
dash_time = 0.5
cooldown = 1.5
delay = 1.0
metadata/_custom_type_script = "uid://c3klywbeud1cv"

[node name="EnemyComponent" type="Node" parent="." node_paths=PackedStringArray("hit_sfx")]
script = ExtResource("7_awu5q")
hit_sfx = NodePath("../HitSFX")
essence = 200.0
on_hit_velocity_loss = 0.75
xp_payout = 5
metadata/_custom_type_script = "uid://tlvl68soe85"

[node name="DashQuery" type="Area3D" parent="."]
collision_layer = 2
collision_mask = 2
script = ExtResource("7_ei8lu")
damage = 200
knockback_strength = 32.0
die_reason = "You got punched too hard"

[node name="Hitbox" type="CollisionShape3D" parent="DashQuery"]
shape = SubResource("CapsuleShape3D_ei8lu")
debug_color = Color(0, 1, 1, 1)

[node name="Query" type="Area3D" parent="."]
collision_layer = 6
collision_mask = 6

[node name="Hitbox" type="CollisionShape3D" parent="Query"]
shape = SubResource("CapsuleShape3D_od4yj")

[node name="Sprite3D" type="Sprite3D" parent="."]
modulate = Color(0.73, 0.219, 0.219, 1)
pixel_size = 0.03
billboard = 1
texture_filter = 0
texture = ExtResource("8_ei8lu")

[node name="ShootSFX" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("10_guxfu")
pitch_scale = 2.4
bus = &"SFX1"
attenuation_filter_cutoff_hz = 20500.0

[node name="HitSFX" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("11_15kmb")
bus = &"SFX1"
attenuation_filter_cutoff_hz = 20500.0

[node name="3DBar" parent="." instance=ExtResource("11_a7atj")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.3, 0)

[connection signal="died" from="EssenceComponent" to="." method="essence_component_died"]
[connection signal="fractured" from="EssenceComponent" to="." method="essence_component_fractured"]
[connection signal="dashed" from="DashComponent" to="." method="dashed"]
[connection signal="body_entered" from="DashQuery" to="." method="dash_query_body_entered"]
[connection signal="area_entered" from="Query" to="." method="query_area_entered"]
